added the fast commit

--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy-New-Year</title>
-    <link rel="stylesheet" href="new,style/style">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header>
-  
+        <div class="banner">
+            <div class="banner-container">
+                <h4 class="banner-title">Happy New Year</h4>
+                <h1 class="banner-content">New Year Party <br> Celebration</h1>
+            </div>
+        </div>
     </header>
     <main>
 
