added the group content

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
                 <h1 class="banner-content">New Year Party <br> Celebration</h1>
             </div>
         </div>
+        <!-- 65%bappi -->
+         <div class="group">
+            <div class="group-content">
+                   <h1 class="bp-group">65% OFF</h1>
+            <p class="cp-group">OUR HOLIDAY DEALS ARE BETTER</p>
+            <h3 class="dp-group">ALL CATEGORIES</h3>
+            </div>
+         </div>
+         <div class="deep">
+             <img src="images/New Year Photo.png" alt="">
+         </div>
     </header>
     <main>
 
