--- a/index.html
+++ b/index.html
@@ -30,8 +30,14 @@
          </div>
     </header>
     <main>
-
-
+      <div class="emoji">
+        <div class="emoji-container">
+           <h1 class="ncp-title">Welcome to <br> midnight party</h1>
+           <p class="ncp-subtitle">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br> molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+           <h4 class="ncp-description">Join Now</h4>
+           
+             </div>
+      </div>
     </main>
     <footer>
 
